# Spira

./: Dockerfile  README.md  THIRD_PARTY_LICENSES.md
assets/: Minuet_fp16.patch  torchsparse_k_5.patch
automate/: ablation.sh  correctness.sh  end_to_end.sh  layerwise.sh  mapping.sh  run_all.sh
datasets/: download_kitti.sh  download_scannet.sh  download_waymo.sh  helpers.py  prepare_kitti.py  prepare_scannet.py  prepare_waymo.py  random_voxel_generator.py
scripts/: ablation_experiment.py  ablation_plot.py  correctness.py  end_to_end_experiment.py  end_to_end_plot.py  layerwise_experiment.py  layerwise_plot.py  loaders.py  mapping_experiment.py  mapping_plot.py
scripts/models/: __init__.py  convert_weights.py
scripts/models/minuet/: common.py  sparse_resnet.py  sparse_unet.py
scripts/models/spira/: sparse_resnet.py  sparse_unet.py
scripts/models/spira/modules/: blocks.py
scripts/models/torchsparse/: sparse_resnet.py  sparse_unet.py
scripts/models/torchsparse/modules/: blocks.py
source/: CMakeLists.txt  setup.cfg  setup.py
source/build_info/: gather_build_info.py
source/csrc/: CMakeLists.txt
source/csrc/spira/: compress_layout.h  enabled_arguments.h
source/csrc/spira/common/: exception.h  functions.h  macro.h  stringify.h
source/csrc/spira/cpu/: context.cpp  context.h  memory.cpp  memory.h
source/csrc/spira/cuda/: buffer_pool.cu  buffer_pool.cuh  context.cu  context.cuh  event.cu  event.cuh  helpers.cu  helpers.cuh  memory.cu  memory.cuh  stream.cuh
source/csrc/spira/cuda/device/: binary_search.cuh  data_movement.cuh  loads.cuh
source/csrc/spira/cuda/functions/: arg_sort_coodrinates.cu  arg_sort_coodrinates.cuh  query_sorted_index.cu  query_sorted_index.cuh  sparse_convolution.cu  sparse_convolution.cuh
source/csrc/spira/cuda/kernels/: compress.cuh  convert_transposed_os.cuh  fill_range.cuh  generate_masks_from_kernel_map.cuh  output_stat.cuh  padded_gather_warp_optimized.cuh  padded_scatter_warp_optimized.cuh  quantifier_wstat.cuh  query_sorted.cuh  weight_stat.cuh
source/csrc/spira/torch/: common.cpp  common.h  cuda_arg_sort_coordinates.cu  cuda_common.cu  cuda_common.cuh  cuda_memory_buffer.cu  cuda_sparse_convolution_forward.cu  cuda_sparse_convolution_mapping.cu
source/spira/: __init__.py  operators.py  tensors.py
source/spira/nn/: __init__.py  activations.py  conv.py  normalizations.py
source/spira/nn/functional/: __init__.py  convolution.py  indexing.py  memory.py
source/spira/utils/: __init__.py  apply.py  helpers.py  typing.py
