[metadata]
name = Spira
version = 0.0.1
author = Dionysios Adamopoulos
author_email = dionadam2013@gmail.com
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch
    tqdm
    requests
    termcolor
    pybind11
    ninja
    cmake
    packaging
    numpy

[yapf]
based_on_style = google
indent_width = 2
spaces_around_power_operator = true
split_before_arithmetic_operator = true
split_before_logical_operator = true
split_before_bitwise_operator = true
